[package]
name = "wikimisc"
version = "0.1.0"
edition = "2021"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
keywords = ["wikibase", "wikidata", "mediawiki"]
repository = "https://github.com/magnusmanske/wikimisc"
description = "A library with MediaWiki-related functionality"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "*"
chrono = "*"
csv = "*"
lazy_static = "1"
mysql_async = "*"
reqwest = { version = "*", features = ["json"] }
regex = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "*"
toolforge = "*"
urlencoding = "^2"
wikibase = { git = "https://gitlab.com/tobias47n9e/wikibase_rs", branch = "concurrent_limiter" }
