[package]
name = "wikimisc"
version = "0.1.0"
edition = "2021"
# `std::sync::LazyLock` (used in several modules) was stabilised in 1.80.
rust-version = "1.80"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
keywords = ["wikibase", "wikidata", "mediawiki"]
repository = "https://github.com/magnusmanske/wikimisc"
description = "A library with MediaWiki-related functionality"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = "0.4"
csv = "1"
mysql_async = "0.36"
reqwest = { version = "0.13", features = ["json"] }
regex = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
toolforge = "5"
urlencoding = "^2"
wikibase = "^0.7"
